--- a/store/app/design/frontend/icu/icu/template/page/html/footer.phtml
+++ b/store/app/design/frontend/icu/icu/template/page/html/footer.phtml
@@ -24,7 +24,7 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<div id="footer_section">
+<div id="footer_section" class="row pull-right">
   <!-- share -->
   <div id="share">
     <ul>
@@ -47,3 +47,4 @@
   <!-- /footer links -->
 
 </div>
+
