--- a/store/app/design/frontend/icu/icu/template/catalog/product/list/toolbar.phtml
+++ b/store/app/design/frontend/icu/icu/template/catalog/product/list/toolbar.phtml
@@ -31,15 +31,6 @@
  * @see Mage_Catalog_Block_Product_List_Toolbar
  */
 ?>
-<?php if($this->getCollection()->getSize()){ ?>
-
-<div class="right">
-<table><tr><td>
-<div class="pager"><?php echo $this->getPagerHtml() ?></div>
-</td><td><div style="padding-top:14px;"><a href="#" class="backlink">back to top <img src="<?= $this->getSkinUrl('images/up_arrow.jpg'); ?>" width="10" height="8" /></a></div>
-			</td></tr></table>
-
-</div>
-<?php }else{ ?>
-	<div class="pager"><div class="pages"><div class="basictextfiller"></div></div></div>
-<?php } ?>
+<?php if($this->getCollection()->getSize()): ?>
+	<div class="pull-right"><?= $this->getPagerHtml(); ?></div>
+<?php endif; ?>
