--- a/store/app/design/frontend/icu/icu/template/catalog/product/list/toolbar2.phtml
+++ b/store/app/design/frontend/icu/icu/template/catalog/product/list/toolbar2.phtml
@@ -33,13 +33,18 @@
 ?>
 <?php if($this->getCollection()->getSize()): ?>
 
-<div class="right">
-<table><tr><td>
+<div class="pull-right">
+
 <div class="pager">
 <?php echo $this->getPagerHtml() ?>
 </div>
-</td><td><div style="padding-top:8px;" ><?php if($_GET['limit'] == 'all'){?><a href="<?php $t3array = explode('?', $this->helper('core/url')->getCurrentUrl()); echo $t3array[0]; ?>?limit=12&p=1" class="prodtitlelink">switch to paged view</a><?php }?><a href="#" class="prodtitlelink">Back to top <img src="<?= $this->getSkinUrl('images/up_arrow.jpg'); ?>" width="10" height="8" /></a></div>
-			</td></tr></table>
+<div>
+	<?php if($_GET['limit'] == 'all'):?>
+	<a href="<?php $t3array = explode('?', $this->helper('core/url')->getCurrentUrl()); echo $t3array[0]; ?>?limit=12&p=1" class="prodtitlelink">switch to paged view</a>
+	<?php endif; ?>
+	<a href="#" class="prodtitlelink">Back to top <img src="<?= $this->getSkinUrl('images/up_arrow.jpg'); ?>" width="10" height="8" /></a>
+</div>
+			
 
 </div>
 <?php endif ?>
