--- a/store/app/design/frontend/icu/icu/template/page/3columns.phtml
+++ b/store/app/design/frontend/icu/icu/template/page/3columns.phtml
@@ -54,6 +54,13 @@
 <?php echo $this->getChildHtml('before_body_end') ?>
 </div>
 <!-- end #wrapper -->
+  <?php 
+    //oc: get common footer.
+	$base_url  	= str_replace("/store/", "",$this->getUrl(''));
+    $footerPath = $base_url . '/php/common_icu_footer.php';
+    $footer     = file_get_contents($footerPath, false); 
+    echo $footer;
 
+  ?>
 </body>
 </html>
