--- a/store/skin/frontend/icu/icu/css/style.css
+++ b/store/skin/frontend/icu/icu/css/style.css
@@ -610,53 +610,51 @@ input[type="button"].btn03 {margin:0; padding:0; width:110px; height:23px; backg
 
 
 /* ---------------------------- Header Styles ---------------------------- */
-#wrapper{ padding-top:0;}
+#wrapper{ 
+	padding-top:0;
+	position: relative;
+}
 #store_subnav_wrapper{
+	width: 100%;
 	position:absolute;
 	z-index: 100;
-	top: 134px;
+	top: 110px;
+}
+#store_subnav{
+	padding-left: 214px;
 }
 #store_subnav a{
 	color: #000;
+	font-size: 1.2em;
 }
-	/* logo */
-
-	#logo {margin:0; padding:10px 0 0 0; width:345px; height:50px; float:middle; }
-
-	
-	/* account */
-
-	#account {margin:0; padding:0; width:615px; height:50px; float:right; font:normal 12px/40px Arial, Helvetica, sans-serif; color:#000000; text-align:right; position: absolute; right: 135px; top: 0px;}
-
-	#account a {color:#000000; text-decoration:none;}
-
-	#account a:hover {color:#999999; text-decoration:none;}
-
-	#account span {padding:0 4px;}
-	
 	
 	/* keyword */
 #store_subnav li{
 	display: inline-block; 
+	padding: 2px 6px;
+	line-height: 12px;
+}
+.piped{
+	border-right: solid 1px black;
 }
 	#keyword {
 		margin:0; 
 		padding:0; 
-		 
+		
 		height:27px; 
 		text-align:right;
 	}
 
 	#keyword input[type="text"] {
 		margin:0; 
-		padding:2px 4px; 
+		padding:4px 4px; 
 		width:190px; 
-		height:auto; 
-		background-color:#f7f7f7; 
-		border:1px solid #bcbcbc; 
+		background-color:#E6E6E6; 
+		border-radius: 0;
 		font-family:Arial, Helvetica, sans-serif; 
 		color:#bcbcbc; 
-		font-size:11px;
+		font-size:1.1em;
+		border: none;
 	}
 
 	#keyword input[type="text"]:focus {border:1px solid #999999; color:#999999;}
@@ -678,15 +676,15 @@ input[type="button"].btn03 {margin:0; padding:0; width:110px; height:23px; backg
 		text-transform:uppercase; 
 		cursor:pointer;
 	}
+#search_mini_form {
 
+
+}
+#select-language{
+	display: none;
+}
 .b-style-dropdown {
-/*    position: absolute;
-    right: 0;
-    text-align: right;
-    top: 11px;
-    width: 170px;
-    z-index: 999;
-    z-index:54;*/
+	padding-left: 40px;
 }
 
 .b-style-dropdown span { padding: 0; margin: 0; }
@@ -802,7 +800,9 @@ input[type="button"].btn03 {margin:0; padding:0; width:110px; height:23px; backg
 /* ---------------------------- Navigation Styles ---------------------------- */
 
 #navigation_section {margin:0 auto; padding:0; width:960px; height:22px; background-color:#000000; left: -1px;}
-
+.pages ol li{
+	display: inline;
+}
 
 
 /* ---------------------------- Body Styles ---------------------------- */
@@ -985,39 +985,18 @@ input[type="button"].btn03 {margin:0; padding:0; width:110px; height:23px; backg
 		text-decoration:bold;
 	}
 
-	.backlink:link {
+	.backlink {
 		font:Arial, Helvetica, sans-serif;
-		font-size:14px;
+		padding: 5px 14px;
 		color:#666666;
 		text-decoration:none;
 	}
 
-	.backlink:active {
-		font:Arial, Helvetica, sans-serif;
-		font-size:14px;
-		color:#666666;
-		margin: 6px 0 0 0;
-		text-decoration:none;
-	}
-
-	.backlink:visited {
-		font:Arial, Helvetica, sans-serif;
-		font-size:14px;
-		color:#666666;
-		text-decoration:none;
-		margin: 6px 0 0 0;
-	}
-
-	.backlink:hover {
-		font:Arial, Helvetica, sans-serif;
-		font-size:14px;
-		color:#333333;
-		text-decoration:none;
-		margin: 6px 0 0 0;
-	}
 
 
-
+.pro_box{
+	margin-left: 10px !important;
+}
 
 
 .scrollArea {
@@ -1031,7 +1010,15 @@ input[type="button"].btn03 {margin:0; padding:0; width:110px; height:23px; backg
 /* subscribe-left */
 	.subscribe-left-block {margin-top:50px; padding:0; height:auto; text-decoration:none;}
 	.subscribe-borders {padding: 15px 0; width:180px; border-top: 1px solid #999999; border-bottom: 1px solid #999999; overflow:hidden;}
-	.subscribe-header {margin:0; padding:0; height:auto; font-size:23px; font-family:"Perpetua_Titling_MT"; color:#000000;}
+	.subscribe-header {
+		margin:0; 
+		padding:0; 
+		height:auto; 
+		font-size:23px; 
+		font-family:"JosefinSansStdLight";
+		text-transform: uppercase; 
+		color:#000000;
+	}
 	.subscribe-to {font:normal 33px/30px "Fiolex Girls"; color:#E5A64B;}
 	
 	@font-face {
@@ -1670,8 +1657,8 @@ input[type="button"].btn03 {margin:0; padding:0; width:110px; height:23px; backg
 
 
 
-	#all_products {
-	/*	margin:0 auto; padding:0; width:960px; height:auto; min-height:650px;*/
+	#store_list {
+		padding-top: 50px;
 	}
 
 	#tagline2 {margin:0; padding:30px 0; width:960px; height:auto; float:left;}
@@ -2852,13 +2839,4 @@ a.flashSale_French:hover {
     font-style: normal;
 
 }
-#search_mini_form {
-  overflow: hidden;
-/*  padding-top: 37px;*/
-  position: relative;
-  display: block;
 
-}
-#select-language{
-	display: none;
-}
