--- a/wp/wp-content/themes/icuinparis/style.css
+++ b/wp/wp-content/themes/icuinparis/style.css
@@ -30,7 +30,7 @@ Version:        1.0
 }
 
 html{
-    background: #545454;
+    background-color: #545454;
 }
 body {
   font-size: 62.5%;
@@ -95,20 +95,7 @@ body {
 #homepage_callouts{
     padding-bottom: 31px;
 }
-#footer {
-    border-top: opx solid #676D76;
-    color: #545454;
-    padding: 4.236em 0 2.618em;
-    height:400px;
-}
 
-#footer {
-    color: #d1d1d1;
-    text-align:center;
-    background-image: url('./img/bkgr_foot.jpg');
-    background-repeat: repeat-x;
-    background-color: rgba(0, 0, 0, 0.19);
-}
 #store_featurette_header h1 {
     padding: 0; 
 
@@ -210,7 +197,9 @@ div#content.col-full section#main.col-left article.post-8994 aside.post-meta{
     
     margin:0px;
 }
-
+#description{
+    padding-top: 35px;
+}
 #description p, .page-template-single-designers-php p{
  
     font-size: 1.8em;
